# StockShrew

./: CMakeLists.txt  README.md  main.cpp
src/: Abbreviations.h  CMakeLists.txt  Common.h  Console.h  Display.cpp  Display.h  Evaluation.h  LookupTables.cpp  LookupTables.h  Phase.h  Piece.cpp  Piece.h  Side.h  State.cpp  State.h  StateDisplay.cpp  StateDisplay.h  StateRecord.cpp  StateRecord.h  Strategy.h  Type.h
test/: CMakeLists.txt  OffspringsTests.cpp  TestUtils.h  Tests.cpp
